--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
     <div class="partner-logos">
       <!-- replace logos here! -->
       <a href="https://www.acmi.net.au" target="_blank">
-        <img class="logo" src="{{ site.baseurl }}/assets/img/logo/fsf.png"/>
+        <img class="logo" src="{{ site.baseurl }}/assets/img/logo/377AB4A0-8A68-4BCC-8884-034156ECC66D.jpeg"/>
       </a>
     </div>
   </div>
